--- a/server/templates/server/table_detail.html
+++ b/server/templates/server/table_detail.html
@@ -4,10 +4,15 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <a href="{% url 'server_home' %}" class="btn btn-default btn-lg pull-right">
-                Go Back
+            <a href="{% url 'server_home' %}" class="btn btn-default btn-lg pull-left">
+                Back To Current Tables
             </a>
-
+            <br>
+            {% if user.userprofile.position == 'M' %}
+            <a href="{% url 'index' %}" class="btn btn-default btn-lg pull-left">
+                Back To Administrator Home
+            </a>
+            {% endif %}
         </div>
         <div class="col-xs-4">
             <div class="panel panel-default">
@@ -15,8 +20,8 @@
 
                     <h3>{{ table_object.server.workplace }}</h3>
                     Server {{ table_object.server }}
-                    Table {{ table_object.number }}
-                    Date {{ table_object.started }}
+                    Table {{ table_object.number }}<br>
+                    {{ table_object.started }}
                     <br><br>
                     Items:
                     <br>
@@ -33,6 +38,7 @@
                     {% endif %}
                     <br><br>
                     <br>
+                    {% if not table_object.paid %}
                     <form action="{% url 'charge_view' %}" method="POST">
                         {% csrf_token %}
                         <input type="hidden" name="amount" value="{{ table_object.stripe_total }}">
@@ -42,12 +48,12 @@
                         data-key="pk_test_rdjIyPpbimdaKQ6bzkbWV5Mp"
                         data-amount="{{ table_object.stripe_total }}"
                         data-name="{{ table_object.server.workplace }}"
-                        data-description="Widget"
+                        data-description="Pay Bill"
                         data-image="/img/documentation/checkout/marketplace.png"
                         data-locale="auto">
                       </script>
                     </form>
-
+                    {% endif %}
                 </div>
 
             </div>
