--- a/server/templates/employee_navbar_include.html
+++ b/server/templates/employee_navbar_include.html
@@ -2,9 +2,11 @@
     <ul class="nav nav-pills">
         <li role="presentation"><a href="#">Logged In As {{ user }}</a></li>
         <li role="presentation"><a href="{% url 'logout' %}">Log Out</a></li>
-        <li role="presentation"><a href="{% url 'kitchen' %}">Kitchen</a></li>
-        <li role="presentation"><a href="{% url 'index' %}">Index</a></li>
-        <li role="presentation"><a href="{% url 'server_home' %}">server_home</a></li>
-
+        <li role="presentation"><a href="{% url 'kitchen' %}">Kitchen Home</a></li>
+        {% if user.userprofile.position == 'M' %}
+        <li role="presentation"><a href="{% url 'index' %}">Administrator Home</a></li>
+        {% endif %}
+        <li role="presentation"><a href="{% url 'server_home' %}">Current Tables</a></li>
+        <li role="presentation"><a href="#">Current Menu: {{ user.userprofile.workplace.current_menu }}</a></li>
     </ul>
 </div>
