--- a/server/templates/navbar_include.html
+++ b/server/templates/navbar_include.html
@@ -5,11 +5,11 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar">AAAAAAAAAAAA</span>
+                <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}">{{ user.userprofile.workplace }} Home</a>
+            <a class="navbar-brand" href="{% url 'index' %}">{{ user.userprofile.workplace }} Administration</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -37,14 +37,8 @@
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     <li>
-                        <a href="{% url 'index' %}"><i class="fa fa-dashboard fa-fw"></i>Home Link</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'server_home' %}"><i class="fa fa-bar-chart-o fa-fw"></i>Server View<span class="fa arrow"></span></a>
+                        <a href="{% url 'server_home' %}"><i class="fa fa-bar-chart-o fa-fw"></i>Current Tables<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="">New Table</a>
-                            </li>
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
