--- a/server/templates/navbar_include.html
+++ b/server/templates/navbar_include.html
@@ -37,16 +37,15 @@
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     <li>
-                        <a href="{% url 'server_home' %}"><i class="fa fa-bar-chart-o fa-fw"></i>Current Tables<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                        </ul>
-                        <!-- /.nav-second-level -->
+                        <a href="{% url 'server_home' %}">
+                            <i class="fa fa-bar-chart-o fa-fw"></i>Current Tables
+                        </a>
                     </li>
                     <li>
-                        <a href="{% url 'kitchen' %}"><i class="fa fa-table fa-fw"></i>Kitchen View</a>
+                        <a href="{% url 'kitchen' %}"><i class="fa fa-table fa-fw"></i>Kitchen</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-wrench fa-fw"></i>Admin<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-wrench fa-fw"></i>Menu<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="{% url 'add_menu_item' %}">Add Menu Item</a>
@@ -54,10 +53,15 @@
                             <li>
                                 <a href="{% url 'create_menu' %}">Create New Menu</a>
                             </li>
+                        </ul>
+                    <li>
+                        <a href="#"><i class="fa fa-wrench fa-fw"></i>Admin<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
                             <li>
                                 <a href="{% url 'restaurant_update' %}">Update Restaurant Info</a>
                             </li>
                         </ul>
+                    </li>
                         <!-- /.nav-second-level -->
                     </li>
                 </ul>
