--- a/server/templates/server/table_detail.html
+++ b/server/templates/server/table_detail.html
@@ -26,15 +26,15 @@
                     Items:
                     <br>
                     {% for item in ticket_items %}
-                    Seat {{ item.seat_number }} {{ item.item.name }} ${{ item.item.price }}<br>
+                    Seat {{ item.seat_number }} {{ item.item.name }} <span class="pull-right">${{ item.item.price }}</span><br>
                     {% endfor %}
                     <br>
-                    Subtotal: ${{ table_object.total_ticket_price }}<br>
-                    Tax: {{ table_object.server.workplace.tax_percentage }}<br>
+                    Subtotal: <span class="pull-right">${{ table_object.total_ticket_price }}</span><br>
+                    Tax: <span class="pull-right">{{ table_object.server.workplace.tax_percentage }}</span><br>
                     {% if table_object.server.workplace.tax_percentage %}
-                    Total: {{ table_object.price_with_tax }}
+                    Total: <span class="pull-right">{{ table_object.price_with_tax }}</span>
                     {% else %}
-                    Total: ${{ table_object.total_ticket_price }}
+                    <h4>Total: <span class="pull-right">${{ table_object.total_ticket_price }}</span></h4>
                     {% endif %}
                     <br><br>
                     <br>
@@ -49,10 +49,12 @@
                         data-amount="{{ table_object.stripe_total }}"
                         data-name="{{ table_object.server.workplace }}"
                         data-description="Pay Bill"
-                        data-image="/img/documentation/checkout/marketplace.png"
+                        data-image=""
                         data-locale="auto">
                       </script>
                     </form>
+                    {% else %}
+                    <h4>Paid</h4>
                     {% endif %}
                 </div>
 
