additional ui cleanup

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -64,9 +64,9 @@
                     <br>
                     {% endfor %}
                 </div>
-                <a href="{% url 'create_menu' %}">
+                <a href="#">
                     <div class="panel-footer">
-                        <span class="pull-left">Go To All Fulfilled Tables</span>
+                        <span class="pull-left">Go To All Paid Tables</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
