--- a/server/templates/navbar_include.html
+++ b/server/templates/navbar_include.html
@@ -48,6 +48,9 @@
                         <a href="#"><i class="fa fa-wrench fa-fw"></i>Menu<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
+                                <a href="{% url 'menu_detail' user.userprofile.workplace.current_menu.pk %}">Current Menu: {{ user.userprofile.workplace.current_menu }}</a>
+                            </li>
+                            <li>
                                 <a href="{% url 'add_menu_item' %}">Add Menu Item</a>
                             </li>
                             <li>
