--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <a href="#">
                     <div class="panel-footer">
-                        <span class="pull-left">Go To All Paid Tables</span>
+                        <span class="pull-left"></span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
@@ -75,29 +75,6 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
-            <div class="panel panel-warning">
-                <div class="panel-heading">
-                    <h4>Current Menu: <span class="pull-right">{{ user.userprofile.workplace.current_menu }}</span></h4>
-                    {% for menu in menus %}
-                    <a href="{% url 'menu_detail' menu.pk %}">
-                        <span class="pull-left">{{ menu.name }}</span>
-                    </a>
-                    <a href="{% url 'mark_current_menu' menu.pk %}">
-                        <span class="pull-right">Mark Current</span><span class="glyphicon glyphicon-ok-sign pull-right"></span>
-                    </a>
-                    <br>
-                    {% endfor %}
-                </div>
-                <a href="{% url 'create_menu' %}">
-                    <div class="panel-footer">
-                        <span class="pull-left">Add New Menu</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>
-            </div>
-        </div>
     </div>
 </div>
 {% endblock %}
