--- a/server/templates/landing.html
+++ b/server/templates/landing.html
@@ -13,11 +13,11 @@
             <div class="row">
 
                     <div class="jumbotron">
-                      <h1>Welcome To The Restaurant App</h1>
-                      <p>A lightweight responsive restaurant ordering system</p>
+                      <h1>Welcome To Server Buddy</h1>
+                      <p>A lightweight backend-driven restaurant ordering system</p>
                       <p>
                           <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Log In</a>
-                          <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Sign Up</a>
+                          <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Sign Up Your Restaurant</a>
                       </p>
                     </div>
 
@@ -31,11 +31,6 @@
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="{% static 'bower_components/metisMenu/dist/metisMenu.min.js' %}"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="{% static 'bower_components/raphael/raphael-min.js' %}"></script>
-    <script src="{% static 'bower_components/morrisjs/morris.min.js' %}"></script>
-    <script src="{% static 'js/morris-data.js' %}"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'dist/js/sb-admin-2.js' %}"></script>
