--- a/server/templates/registration/login.html
+++ b/server/templates/registration/login.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Log In To Restaurant App</title>
+        <title>Log In To Server Buddy</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,7 +49,6 @@
                                     </div>
                                     <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                                     <a href="{% url 'landing' %}" class="btn btn-lg btn-primary btn-block">Home</a>
-
                                 </fieldset>
                             </form>
                         </div>
